@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2104 2004/01/20 03:49:22 walito Exp $
+ * $Id: ChangeLog,v 1.2105 2004/01/21 00:51:05 peterrees Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,12 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-01-21 00:55 UTC-0300 Mauricio Abre <maurifull@datafull.com>
+  * source/rtl/saverest.c
+    ! Check for valid coords
+      TPopup:open is passing coords upside down to savescreen()
+      which then all gts return very weird rectsizes.
 
 2004-01-21 13:50 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
   + /contrib/winprn - new (basic) Windows GDI printing class & test program
